[package]
name = "tower-fetch"
version = "0.0.0"
authors = ["Daiki Mizukami <tesaguriguma@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
bytes = "0.5"
http = "0.2"
http-body = "0.3"
js-sys = "0.3"
tower-service = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
    "Headers",
    "ReadableStream",
    "Request",
    "RequestInit",
    "Response",
    "Window",
]
